Fixed scrollbar styling and showing everywhere

--- a/root.css
+++ b/root.css
@@ -107,7 +107,7 @@ input {
 
 /* Firefox */
 * {
-  scrollbar-width: thin;
+  /* scrollbar-width: thin; */
   scrollbar-color: var(--primary-color-100);
 }
 
